feat(article): added get article by slug
